--- a/client/src/layout.css
+++ b/client/src/layout.css
@@ -94,8 +94,8 @@
   }
 }
 
-/* .ri-notification-fill {
-  margin-top: 13px;
+/* .ri-notification-line {
+  background-color: black;
 } */
 
 .a-flex {
